# claude-do

./: .bandit  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  spec.md
.claude/: hooks.json
.claude-plugin/: marketplace.json  plugin.json
.do/: context.md  decisions.md  design.md  lessons.md  pitfalls.md  reference.md  spec.md  stack.md
commands/: audit.md  challenge.md  release.md
scripts/: plan.py
shared/: do.py  lead-protocol-core.md  lead-protocol-teams.md  plan.py
shared/cli/: __main__.py  envelope.py
shared/cli/cli/: __init__.py  archive.py  memory.py  plan.py  reflection.py  research.py  spec.py  trace.py
shared/cli/ops/: __init__.py  archive.py  memory.py  plan.py  reflection.py  research.py  spec.py  trace.py
shared/cli/store/: __init__.py  atomic.py  hash.py  jsonl.py
skills/design/: SKILL.md
skills/execute/: SKILL.md  lead-protocol-core.md
skills/frame/: SKILL.md
skills/improve/: SKILL.md
skills/plan/: SKILL.md
skills/recon/: SKILL.md
skills/refine/: SKILL.md
skills/reflect/: SKILL.md
skills/research/: SKILL.md
skills/shape/: SKILL.md
skills/shared/: lead-protocol.md
skills/simplify/: SKILL.md  lead-protocol-teams.md
skills/work/: SKILL.md
tests/: conftest.py  test_archive.py  test_archive_contracts.py  test_do.py  test_envelope.py  test_integration.py  test_memory.py  test_plan.py  test_plan_contracts.py  test_reflection.py  test_research.py  test_spec.py  test_spec_contracts.py  test_store_atomic.py  test_store_hash.py  test_store_jsonl.py  test_trace.py
(+4 files in other folders)
